--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
           <i class="fa fa-headset fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
           <div class="ps-4">
             <h6>Talk to a Container Specialist</h6>
-            <h3 class="text-primary m-0">+64 9 123 4567</h3>
+            <h3 class="text-primary m-0">027 509 6858</h3>
             <a href="mailto:sales@connectix.co.nz" class="text-decoration-none">sales@connectix.co.nz</a>
           </div>
         </div>
@@ -186,61 +186,73 @@
 
        
 
-    <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 6rem;">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Address</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-                               <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="">Container Transportation</a>
-                    <a class="btn btn-link" href="">Road Freight</a>
-                    <a class="btn btn-link" href="">Devanning Solutions</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Quick Links</h4>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-light mb-4">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="copyright">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
-                    </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+<!-- Footer start -->
+<div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 6rem;">
+  <div class="container py-5">
+    <div class="row g-5">
+
+      <!-- Address -->
+      <div class="col-lg-3 col-md-6">
+        <h4 class="text-light mb-4">Address</h4>
+        <p class="mb-2">
+          <i class="fa fa-map-marker-alt me-3"></i>
+          New Windsor, Auckland
+        </p>
+        <p class="mb-2">
+          <i class="fa fa-phone-alt me-3"></i>
+          <a href="tel:0275096858" class="text-light text-decoration-none">
+            027 509 6858
+          </a>
+        </p>
+        <p class="mb-2">
+          <i class="fa fa-envelope me-3"></i>
+          <a href="mailto:Sales@Connectix.co.nz" class="text-light text-decoration-none">
+            Sales@Connectix.co.nz
+          </a>
+        </p>
+      </div>
+
+      <!-- Services -->
+      <div class="col-lg-3 col-md-6">
+        <h4 class="text-light mb-4">Services</h4>
+        <a class="btn btn-link text-light" href="contact.html">Container Transportation</a>
+        <a class="btn btn-link text-light" href="contact.html">Road Freight</a>
+        <a class="btn btn-link text-light" href="contact.html">Devanning Solutions</a>
+      </div>
+
+      <!-- Quick Links -->
+      <div class="col-lg-3 col-md-6">
+        <h4 class="text-light mb-4">Quick Links</h4>
+        <a class="btn btn-link text-light" href="about.html">About Us</a>
+        <a class="btn btn-link text-light" href="contact.html">Contact Us</a>
+        <a class="btn btn-link text-light" href="service.html">Our Services</a>
+        <a class="btn btn-link text-light" href="terms.html">Terms &amp; Conditions</a>
+      </div>
+
+      <!-- Container Types -->
+      <div class="col-lg-3 col-md-6">
+        <h4 class="text-light mb-4">Container Types</h4>
+        <a class="btn btn-link text-light" href="contact.html">20' Standard</a>
+        <a class="btn btn-link text-light" href="contact.html">40' Standard</a>
+        <a class="btn btn-link text-light" href="contact.html">High-Cube</a>
+        <a class="btn btn-link text-light" href="contact.html">Reefer</a>
+        <a class="btn btn-link text-light" href="contact.html">Flat Rack</a>
+      </div>
+
     </div>
-    <!-- Footer End -->
+  </div>
+
+  <div class="container">
+    <div class="copyright py-3">
+      <div class="row">
+        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+          &copy; 2025 <a class="border-bottom text-light" href="#">Connectix Logistics</a>, All Rights Reserved.
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Footer End -->
 
 
     <!-- Back to Top -->
