--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Connectix Logistics</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <title>Connectix Logistics | Auckland Container Transport &amp; Road Freight NZ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Connectix Logistics—Auckland-based container transport, road freight and devanning solutions across New Zealand. Fast, insured, tracked, competitive rates. Get your free quote today!">
+    <meta name="keywords" content="Auckland container transport, container transportation NZ, container transport services, New Zealand road freight, Auckland devanning solutions, logistics Auckland, freight services NZ">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.connectix.co.nz/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Connectix Logistics | Auckland Container Transport & Road Freight NZ">
+    <meta property="og:description" content="Auckland-based container transport, road freight and devanning across New Zealand. Fast, insured, tracked.">
+    <meta property="og:url" content="https://www.connectix.co.nz/">
+    <meta property="og:image" content="https://www.connectix.co.nz/img/og-image.jpg">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Connectix Logistics | Auckland Container Transport & Road Freight NZ">
+    <meta name="twitter:description" content="Auckland-based container transport, road freight and devanning across New Zealand. Fast, insured, tracked.">
+    <meta name="twitter:image" content="https://www.connectix.co.nz/img/og-image.jpg">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -29,6 +44,27 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- JSON-LD LocalBusiness -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Connectix Logistics",
+      "image": "https://www.connectix.co.nz/img/og-image.jpg",
+      "telephone": "+64-9-123-4567",
+      "email": "Sales@Connectix.co.nz",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "New Windsor",
+        "addressLocality": "Auckland",
+        "postalCode": "0600",
+        "addressCountry": "NZ"
+      },
+      "url": "https://www.connectix.co.nz/",
+      "description": "Auckland-based container transport, road freight and devanning solutions across New Zealand."
+    }
+    </script>
 </head>
 
 <body>
@@ -49,7 +85,7 @@
     <!-- logo -->
     <img
       src="img/CONNECTIX-LOGO.png"
-      alt="Connectix Logistics"
+      alt="Connectix Logistics Logo"
       height="280"
       width="240"
       class="me-2"
@@ -80,7 +116,7 @@
     <div class="container-fluid p-0 pb-5">
         <div class="owl-carousel header-carousel position-relative mb-5">
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="img/carousel-2.jpg" alt="">
+                <img class="img-fluid" src="img/carousel-2.jpg" alt="Container on truck" />
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(6, 3, 21, .5);">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -95,14 +131,14 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="img/carousel-1.jpg" alt="">
+                <img class="img-fluid" src="img/carousel-1.jpg" alt="Freight truck on highway" />
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(6, 3, 21, .5);">
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h5 class="text-white text-uppercase mb-3 animated slideInDown">Transport & Logistics Solution</h5>
                                 <h1 class="display-3 text-white animated slideInDown mb-4">#1 Place For Your <span class="text-primary">Transport</span> Solution</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Our drivers are fully complaint and every load is insured to give you peace of mind./p>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-2">Our drivers are fully compliant and every load is insured to give you peace of mind.</p>
                                 <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact us today!</a>
                             </div>
                         </div>
@@ -200,51 +236,59 @@
 
 
 
-    <!-- Quote Start -->
-    <div class="container-xxl py-5">
-        <div class="container py-5">
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="text-secondary text-uppercase mb-3">Get A Quote</h6>
-                    <h1 class="mb-5">Request A Free Quote!</h1>
-                    <p class="mb-5">We will try our best to provide you tailored solution for your volume and transport requirements</p>
-                </div>
-                <div class="col-lg-7">
-                    <div class="bg-light text-center p-5 wow fadeIn" data-wow-delay="0.5s">
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Name" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Mobile" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <select class="form-select border-0" style="height: 55px;">
-                                        <option selected>Select A Freight</option>
-                                        <option value="1">Container transport</option>
-                                        <option value="2">Road freight</option>
-                                        <option value="3">Project work</option>
-                                        <option value="4">General inquiry </option>
-                                    </select>
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control border-0" placeholder="Special Note"></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+<!-- Quote Start -->
+<div class="container-xxl py-5">
+  <div class="container py-5">
+    <div class="row g-5 align-items-center">
+      <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
+        <h6 class="text-secondary text-uppercase mb-3">Get A Quote</h6>
+        <h1 class="mb-5">Request A Free Quote!</h1>
+        <p class="mb-5">We will try our best to provide you tailored solution for your volume and transport requirements</p>
+      </div>
+      <div class="col-lg-7">
+        <div class="bg-light text-center p-5 wow fadeIn" data-wow-delay="0.5s">
+          <form action="https://api.web3forms.com/submit" method="POST">
+            <!-- Replace with your actual Web3Forms access key -->
+            <input type="hidden" name="access_key" value="f7756195-1188-48c3-b556-84752abcf734" />
+            <!-- Optional: email subject, thank-you redirect -->
+            <input type="hidden" name="subject" value="New Quote Request" />
+            <input type="hidden" name="redirect" value="htps://www.connectix.co.nz/thank-you.html" />
+            <!-- Honeypot field -->
+            <input type="checkbox" name="botcheck" style="display:none;" />
+
+            <div class="row g-3">
+              <div class="col-12 col-sm-6">
+                <input name="name" type="text" class="form-control border-0" placeholder="Your Name" style="height: 55px;" required>
+              </div>
+              <div class="col-12 col-sm-6">
+                <input name="email" type="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;" required>
+              </div>
+              <div class="col-12 col-sm-6">
+                <input name="phone" type="text" class="form-control border-0" placeholder="Your Mobile" style="height: 55px;">
+              </div>
+              <div class="col-12 col-sm-6">
+                <select name="freight" class="form-select border-0" style="height: 55px;">
+                  <option value="" disabled selected>Select A Freight</option>
+                  <option value="Container transport">Container transport</option>
+                  <option value="Road freight">Road freight</option>
+                  <option value="Project work">Project work</option>
+                  <option value="General inquiry">General inquiry</option>
+                </select>
+              </div>
+              <div class="col-12">
+                <textarea name="message" class="form-control border-0" placeholder="Message" style="min-height: 100px;"></textarea>
+              </div>
+              <div class="col-12">
+                <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
+              </div>
             </div>
+          </form>
         </div>
+      </div>
     </div>
-    <!-- Quote End -->
+  </div>
+</div>
+<!-- Quote End -->
 
 
 <!-- Footer start -->
@@ -253,12 +297,25 @@
     <div class="row g-5">
 
       <!-- Address -->
-      <div class="col-lg-3 col-md-6">
-        <h4 class="text-light mb-4">Address</h4>
-        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>New Windsor, Auckland</p>
-        <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+64 9 123 4567</p>
-        <p class="mb-2"><i class="fa fa-envelope me-3"></i><a href="mailto:Sales@Connectix.co.nz" class="text-light text-decoration-none">Sales@Connectix.co.nz</a></p>
-      </div>
+ <div class="col-lg-3 col-md-6">
+  <h4 class="text-light mb-4">Address</h4>
+  <p class="mb-2">
+    <i class="fa fa-map-marker-alt me-3"></i>
+    New Windsor, Auckland
+  </p>
+  <p class="mb-2">
+    <i class="fa fa-phone-alt me-3"></i>
+    <a href="tel:0275096858" class="text-light text-decoration-none">
+      027 509 6858
+    </a>
+  </p>
+  <p class="mb-2">
+    <i class="fa fa-envelope me-3"></i>
+    <a href="mailto:Sales@Connectix.co.nz" class="text-light text-decoration-none">
+      Sales@Connectix.co.nz
+    </a>
+  </p>
+</div>
 
       <!-- Services -->
       <div class="col-lg-3 col-md-6">
@@ -275,7 +332,6 @@
         <a class="btn btn-link text-light" href="contact.html">Contact Us</a>
         <a class="btn btn-link text-light" href="service.html">Our Services</a>
         <a class="btn btn-link text-light" href="terms.html">Terms &amp; Conditions</a>
-        <a class="btn btn-link text-light" href="support.html">Support</a>
       </div>
 
       <!-- Container Types -->
@@ -296,10 +352,6 @@
       <div class="row">
         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
           &copy; 2025 <a class="border-bottom text-light" href="#">Connectix Logistics</a>, All Rights Reserved.
-        </div>
-        <div class="col-md-6 text-center text-md-end">
-          Designed by <a class="border-bottom text-light" href="https://htmlcodex.com">HTML Codex</a> |
-          Distributed by <a class="border-bottom text-light" href="https://themewagon.com" target="_blank">ThemeWagon</a>
         </div>
       </div>
     </div>
