--- a/thank-you.html
+++ b/thank-you.html
@@ -3,10 +3,25 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Connectix Logistics</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <title>Connectix Logistics | Auckland Container Transport &amp; Road Freight NZ</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Connectix Logistics—Auckland-based container transport, road freight and devanning solutions across New Zealand. Fast, insured, tracked, competitive rates. Get your free quote today!">
+    <meta name="keywords" content="Auckland container transport, container transportation NZ, container transport services, New Zealand road freight, Auckland devanning solutions, logistics Auckland, freight services NZ">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.connectix.co.nz/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Connectix Logistics | Auckland Container Transport & Road Freight NZ">
+    <meta property="og:description" content="Auckland-based container transport, road freight and devanning across New Zealand. Fast, insured, tracked.">
+    <meta property="og:url" content="https://www.connectix.co.nz/">
+    <meta property="og:image" content="https://www.connectix.co.nz/img/og-image.jpg">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Connectix Logistics | Auckland Container Transport & Road Freight NZ">
+    <meta name="twitter:description" content="Auckland-based container transport, road freight and devanning across New Zealand. Fast, insured, tracked.">
+    <meta name="twitter:image" content="https://www.connectix.co.nz/img/og-image.jpg">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -29,6 +44,27 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- JSON-LD LocalBusiness -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Connectix Logistics",
+      "image": "https://www.connectix.co.nz/img/og-image.jpg",
+      "telephone": "+64-9-123-4567",
+      "email": "Sales@Connectix.co.nz",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "New Windsor",
+        "addressLocality": "Auckland",
+        "postalCode": "0600",
+        "addressCountry": "NZ"
+      },
+      "url": "https://www.connectix.co.nz/",
+      "description": "Auckland-based container transport, road freight and devanning solutions across New Zealand."
+    }
+    </script>
 </head>
 
 <body>
@@ -43,112 +79,57 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow border-top border-5 border-primary sticky-top p-0">
-        <a href="index.html" class="navbar-brand bg-primary d-flex align-items-center px-4 px-lg-5">
-            <h2 class="mb-2 text-white">Connectix Logistics</h2>
-        </a>
+  <a href="index.html"
+     class="navbar-brand bg-primary d-flex align-items-center px-2 px-lg-4">
+
+    <!-- logo -->
+    <img
+      src="img/CONNECTIX-LOGO.png"
+      alt="Connectix Logistics Logo"
+      height="280"
+      width="240"
+      class="me-2"
+    />
+
+    <!-- SEO/ARIA fallback -->
+    <span class="visually-hidden">Connectix Logistics</span>
+  </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Services</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
-                    <div class="dropdown-menu fade-up m-0">
-                        <a href="price.html" class="dropdown-item">Pricing Plan</a>
-                        <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="quote.html" class="dropdown-item active">Free Quote</a>
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
-                    </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="about.html" class="nav-item nav-link">About</a>
+                <a href="contact.html" class="nav-item nav-link active">Contact</a>
             </div>
-<h4 class="m-0 pe-lg-5 d-none d-lg-block">
+<h4 class="m-0 pe-lg-4  d-lg-block">
   <i class="fa fa-envelope text-primary me-2"></i>
   <a href="mailto:Sales@Connectix.co.nz" class="text-decoration-none text-primary">Sales@Connectix.co.nz</a>
 </h4>        </div>
     </nav>
     <!-- Navbar End -->
 
-
-    <!-- Page Header Start -->
-    <div class="container-fluid page-header py-5" style="margin-bottom: 6rem;">
-        <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown">Quote</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-white active" aria-current="page">Quote</li>
-                </ol>
-            </nav>
-        </div>
-    </div>
-    <!-- Page Header End -->
-
-
-    <!-- Quote Start -->
-    <div class="container-xxl py-5">
-        <div class="container py-5">
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="text-secondary text-uppercase mb-3">Get A Quote</h6>
-                    <h1 class="mb-5">Request A Free Qoute!</h1>
-                    <p class="mb-5">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo erat amet</p>
-                    <div class="d-flex align-items-center">
-                        <i class="fa fa-headphones fa-2x flex-shrink-0 bg-primary p-3 text-white"></i>
-                        <div class="ps-4">
-                            <h6>Call for any query!</h6>
-                            <h3 class="text-primary m-0">+012 345 6789</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-7">
-                    <div class="bg-light text-center p-5 wow fadeIn" data-wow-delay="0.5s">
-                        <form>
-                            <div class="row g-3">
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Name" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="email" class="form-control border-0" placeholder="Your Email" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <input type="text" class="form-control border-0" placeholder="Your Mobile" style="height: 55px;">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <select class="form-select border-0" style="height: 55px;">
-                                        <option selected>Select A Freight</option>
-                                        <option value="1">Freight 1</option>
-                                        <option value="2">Freight 2</option>
-                                        <option value="3">Freight 3</option>
-                                    </select>
-                                </div>
-                                <div class="col-12">
-                                    <textarea class="form-control border-0" placeholder="Special Note"></textarea>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Quote End -->
-        
-
-<!-- Footer start -->
+    <!-- Thank You Section Start -->
+<section class="container-xxl py-5">
+  <div class="container text-center py-5">
+    <i class="fa fa-check-circle fa-4x text-primary mb-4"></i>
+    <h1 class="display-5 mb-3">Thank You!</h1>
+    <p class="fs-5 mb-4">
+      Your quote request has been received.<br>
+      We’ll be in touch within <strong>24 hours</strong>.
+    </p>
+    <a href="index.html" class="btn btn-primary py-3 px-5">Return to Home</a>
+  </div>
+</section>
+<!-- Thank You Section End -->
+ <!-- Footer start -->
 <div class="container-fluid bg-dark text-light footer pt-5 wow fadeIn" data-wow-delay="0.1s" style="margin-top: 6rem;">
   <div class="container py-5">
     <div class="row g-5">
 
+      <!-- Address -->
       <!-- Address -->
  <div class="col-lg-3 col-md-6">
   <h4 class="text-light mb-4">Address</h4>
@@ -169,7 +150,6 @@
     </a>
   </p>
 </div>
-
       <!-- Services -->
       <div class="col-lg-3 col-md-6">
         <h4 class="text-light mb-4">Services</h4>
