added favicon and manifest files

--- a/terms.html
+++ b/terms.html
@@ -23,8 +23,12 @@
     <meta name="twitter:description" content="Auckland-based container transport, road freight and devanning across New Zealand. Fast, insured, tracked.">
     <meta name="twitter:image" content="https://www.connectix.co.nz/img/og-image.jpg">
 
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+   <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/img/favicon.svg" />
+    <link rel="shortcut icon" href="/img/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png" />
+    <link rel="manifest" href="/img/site.webmanifest" />
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
